Footer 404 white space fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,7 +154,7 @@ h6 {
     padding: 20px;
     position: relative;
     width: 100%;
-    bottom: 0;
+    bottom: 0px;
 }
 
 .whiteIcon{
